fixed animation overflow bug

--- a/web/css/global.css
+++ b/web/css/global.css
@@ -90,7 +90,6 @@ header {
 }
 
 .marquee-animation-text-block {
-  overflow: hidden;
   margin: 0;
   padding: 0;
   white-space: nowrap;
